=== HEAD

* Make Dataset#filter and related methods treat multiple arguments more intuitively (jeremyevans)

* Fix full text searching with multiple search terms on MySQL (jeremyevans)

* Fix altering a column name, type, default, or NULL/NOT NULL status on MySQL (jeremyevans)

* Fix index type syntax on MySQL (jeremyevans)

* Add temporary table support, via :temp option to Database#create_table (EppO, jeremyevans)

* Add Amalgalite adapter (jeremyevans)

* Remove Sequel::Metaprogramming#metaattr_accessor and metaattr_reader (jeremyevans)

* Remove Dataset#irregular_function_sql (jeremyevans)

* Add Dataset#full_text_sql to the MySQL adapter (dusty)

* Fix schema type parsing of decimal types on MySQL (jeremyevans)

* Make Dataset#quote_identifier work with SQL::Identifiers (jeremyevans)

* Remove methods and features deprecated in 2.12.0 (jeremyevans)

=== 2.12.0 (2009-04-03)

* Deprecate Java::JavaSQL::Timestamp#usec (jeremyevans)

* Fix Model.[] optimization introduced in 2.11.0 for databases that don't use LIMIT (jacaetevha)

* Don't use the model association plugin if SEQUEL_NO_ASSOCIATIONS constant or environment variable is defined (jeremyevans)

* Don't require core_sql if SEQUEL_NO_CORE_EXTENSIONS constant or environment variable is defined (jeremyevans)

* Add validation_helpers model plugin, which adds instance level validation support similar to previously standard validations, with a different API (jeremyevans)

* Split multi_insert into 2 methods with separate APIs, multi_insert for hashes, import for arrays of columns and values (jeremyevans)

* Deprecate Dataset#transform and Model.serialize, and model serialization plugin (jeremyevans)

* Add multi_insert_update to the MySQL adapter, used for setting specific update behavior when an error occurs when using multi_insert (dusty)

* Add multi_insert_ignore to the MySQL adapter, used for skipping errors on row inserts when using multi_insert (dusty)
